# kaitai_struct_cpp_stl_runtime

./: .editorconfig  .gitignore  CMakeLists.txt  Common.cmake  README.md
.build/: build  build.ps1  gtest-v1.17.0-fix-Werror-character-conversion.patch  install-gtest  run-unittest.ps1
.github/workflows/: build.yml
cmake/: FindIconv.cmake  KaitaiRuntimeConfig.cmake.in  KaitaiRuntimeExportConfig.cmake
kaitai/: dataStream.h  endian.h  exceptions.h  kaitaistream.cpp  kaitaistream.h  kaitaistruct.h  kio.cpp  kio.h  kistream.cpp  kistream.h  kostream.cpp  kostream.h
kaitai/detail/: make_unsigned.h
tests/: .gitignore  CMakeLists.txt  tests.pro  unittest.cpp
tests/custom_struct/: custom_struct.cpp  custom_struct.h  custom_struct.ksy  main.cpp
tests/custom_struct/autogenerated(kaitai-struct-compiler-0.8)/: custom_struct.cpp
tests/custom_struct/autogenerated(kaitai-struct-compiler-0.9-SNAPSHOT472911106)/: custom_struct.cpp  custom_struct.h
tests/custom_struct/autogenerated(kaitai-struct-compiler-0.9-SNAPSHOT472911106,--no-auto-read)/: custom_struct.cpp  custom_struct.h
tests/gif/: gif.cpp  gif.h  gif.pro  main.cpp
tests/gif/autogenerated(kaitai-struct-compiler-0.9-SNAPSHOT472911106)/: gif.cpp  gif.h
tests/gif/autogenerated(kaitai-struct-compiler-0.9-SNAPSHOT472911106,--no-auto-read)/: gif.cpp  gif.h
tests/udp_datagram/: main.cpp  udp_datagram.cpp  udp_datagram.h
tests/udp_datagram/autogenerated(kaitai-struct-compiler-0.9-SNAPSHOT472911106)/: udp_datagram.cpp
tests/udp_datagram/autogenerated(kaitai-struct-compiler-0.9-SNAPSHOT472911106,--no-auto-read)/: udp_datagram.cpp  udp_datagram.h
